--- a/Taller 2 CSS/Assets/Css/style.css
+++ b/Taller 2 CSS/Assets/Css/style.css
@@ -54,6 +54,17 @@ table {
     .navbar-rest ul {
     color: #fff;
 } */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+:root {
+    --color-rojo: #c86161;
+    --tamano-letra: 1.5rem;
+    --tipografia: 'Montserrat', sans-serif;
+}
+
+body * {
+    font-family: var(--tipografia);
+}
 
 .navbar-rest {
     background-color: #3e3e3e;
@@ -111,18 +122,64 @@ ul li {
     text-align: justify;
 }
 
-.productos {
+.container-products {
     display: flex;
-    text-align: justify;
+    justify-content: space-evenly;
+    align-items: center;
     margin: 1rem 0;
 }
 
-.productos div {
-    padding: 0 10px;
+.container-products div {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    margin: 0 10px;
+    justify-content: center;
+    width: 30%;
+}
+
+.productos div img {
+    object-fit: cover;
+    object-position: center;
 }
 
 .productos div p {
-    text-align: left;
+    text-align: justify;
+}
+
+[data-pie-pagina="true"] {
+    background-color: var(--color-rojo);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 50px;
+    font-size: var(--tamano-letra);
+}
+
+[data-pie-pagina="true"] section img {
+    border-radius: 50%;
+
+}
+
+.btn-map {
+    width: 350px;
+    height: 60px;
+    border-radius: 60px;
+    background-color: #15ddf3;
+    font-size: 2rem;
+}
+
+.map-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-map{
+    transition: all 2s;
+}
+
+.btn-map:hover {   
+    background-color: #3af315;
+    font-weight: bold;
 }
